[gd_scene load_steps=25 format=3 uid="uid://p4118ivij2ce"]

[ext_resource type="Script" path="res://main/save.gd" id="1_k68r5"]
[ext_resource type="Texture2D" uid="uid://cmpde8obo0f17" path="res://assets/tilesets/biome1/FarmLand_Tile.png" id="2_vsrad"]
[ext_resource type="Texture2D" uid="uid://cu5cvy71hmsyi" path="res://assets/tilesets/biome1/Cliff_Tile.png" id="3_v8a0a"]
[ext_resource type="Texture2D" uid="uid://daxw7fia7kb8e" path="res://assets/tilesets/biome1/Grass_Middle.png" id="4_nh27e"]
[ext_resource type="Texture2D" uid="uid://cbi05afbqxacp" path="res://assets/tilesets/biome1/Path_Middle.png" id="5_g8ccl"]
[ext_resource type="Texture2D" uid="uid://cl8gxva1ogrd0" path="res://assets/tilesets/biome1/Path_Tile.png" id="6_kel2t"]
[ext_resource type="Texture2D" uid="uid://c56ohpfqb221h" path="res://assets/tilesets/biome1/Water_Middle.png" id="7_bsbki"]
[ext_resource type="Texture2D" uid="uid://covqmsg2ikxrw" path="res://assets/tilesets/biome1/Water_Tile.png" id="8_iassf"]
[ext_resource type="Script" path="res://ui/book_text/book_text.gd" id="9_obiat"]
[ext_resource type="Texture2D" uid="uid://dkhfbfnr3mlvx" path="res://exports/rekindled-dawns.icon.png" id="10_fgqxw"]
[ext_resource type="PackedScene" uid="uid://bqkl7bkfn6jvm" path="res://ui/book_text/margin_container.tscn" id="11_h0sim"]
[ext_resource type="PackedScene" uid="uid://le7jsbq447d4" path="res://characters/enemy/character.tscn" id="12_qx25v"]
[ext_resource type="PackedScene" uid="uid://jb05c0muhil4" path="res://characters/player/player.tscn" id="13_kc4kr"]
[ext_resource type="PackedScene" uid="uid://dhfw1omldv15u" path="res://characters/dude/dude.tscn" id="15_0cpbg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_jf8mo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t3v8j"]
texture = ExtResource("2_vsrad")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xfkmq"]
texture = ExtResource("3_v8a0a")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s24p7"]
texture = ExtResource("4_nh27e")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bwltf"]
texture = ExtResource("5_g8ccl")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mh14n"]
texture = ExtResource("6_kel2t")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_45sjd"]
texture = ExtResource("7_bsbki")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.883883, -8, 8, 8, 8, 8, -8, -8, -8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e4nsb"]
texture = ExtResource("8_iassf")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_ecxng"]
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_jf8mo")
sources/0 = SubResource("TileSetAtlasSource_t3v8j")
sources/1 = SubResource("TileSetAtlasSource_xfkmq")
sources/2 = SubResource("TileSetAtlasSource_s24p7")
sources/3 = SubResource("TileSetAtlasSource_bwltf")
sources/4 = SubResource("TileSetAtlasSource_mh14n")
sources/5 = SubResource("TileSetAtlasSource_45sjd")
sources/6 = SubResource("TileSetAtlasSource_e4nsb")

[sub_resource type="SpriteFrames" id="SpriteFrames_cd1ll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_fgqxw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k68r5")

[node name="map" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = SubResource("TileSet_ecxng")
format = 2
layer_0/tile_data = PackedInt32Array(0, 6, 0, 1, 65542, 0, 2, 65542, 0, 3, 65542, 0, 4, 65542, 0, 5, 65542, 0, 6, 131078, 0, 65536, 6, 1, 131072, 6, 1, 196608, 6, 1, 65542, 131078, 1, 131078, 131078, 1, 196614, 131078, 1, 262144, 6, 2, 262150, 131078, 2, 262145, 65542, 2, 262146, 65542, 2, 262147, 65542, 2, 262148, 65542, 2, 262149, 65542, 2, 196609, 5, 0, 131073, 5, 0, 65539, 5, 0, 65541, 5, 0, 131077, 5, 0, 131076, 5, 0, 131075, 5, 0, 131074, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 7, 4, 0, 65543, 4, 1, 131079, 4, 1, 196615, 4, 1, 262151, 4, 1, 65544, 3, 0, 8, 65540, 0, 131080, 3, 0, 196616, 3, 0, 262152, 3, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 4, 1, 9, 65540, 0, 10, 65540, 0, 11, 65540, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 196617, 131076, 1, 131081, 4, 3, 327689, 131076, 1, 262153, 131076, 1, 131082, 65540, 2, 131083, 65540, 2, 65540, 5, 0, 65537, 5, 0, 327688, 3, 0, 65538, 5, 0)

[node name="Book Layer" type="CanvasLayer" parent="." groups=["Persists"]]
script = ExtResource("9_obiat")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Book Layer"]
visible = false
position = Vector2(577, 322.869)
scale = Vector2(8.07607, 4.10733)
sprite_frames = SubResource("SpriteFrames_cd1ll")

[node name="RichTextLabel" type="RichTextLabel" parent="Book Layer/AnimatedSprite2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -25.0
offset_right = 89.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/normal_font_size = 31
text = "Hello!"

[node name="RichTextLabel2" type="RichTextLabel" parent="Book Layer/AnimatedSprite2D"]
visible = false
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.521
anchor_right = 0.456
anchor_bottom = 0.521
offset_left = -113.368
offset_top = -118.688
offset_right = -19.368
offset_bottom = -73.688
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/normal_font_size = 31
text = "Hello "

[node name="LineEdit2" type="LineEdit" parent="Book Layer/AnimatedSprite2D"]
offset_left = -56.0
offset_top = -53.0
offset_right = 77.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 31

[node name="LineEdit" type="LineEdit" parent="Book Layer/AnimatedSprite2D"]
offset_left = 28.346
offset_top = 38.4592
offset_right = 152.346
offset_bottom = 90.4592
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 31

[node name="TextBox" parent="Book Layer" instance=ExtResource("11_h0sim")]
visible = false
offset_left = 301.0
offset_top = 517.0
offset_right = 365.0
offset_bottom = 585.0

[node name="enemy" parent="." node_paths=PackedStringArray("targ") instance=ExtResource("12_qx25v")]
position = Vector2(935, 205)
targ = NodePath("../player")
type = 4

[node name="player" parent="." instance=ExtResource("13_kc4kr")]
position = Vector2(2, 3)

[node name="CharacterBody2D" parent="." instance=ExtResource("15_0cpbg")]
position = Vector2(969, 431)

[connection signal="finished" from="Book Layer" to="player" method="_on_book_layer_finished"]
[connection signal="gui_input" from="Book Layer/AnimatedSprite2D/RichTextLabel" to="Book Layer" method="_on_rich_text_label_gui_input"]
[connection signal="gui_input" from="Book Layer/AnimatedSprite2D/RichTextLabel2" to="Book Layer" method="_on_rich_text_label_2_gui_input"]
[connection signal="text_moment" from="player" to="Book Layer" method="_on_node_2d_text_moment"]
